[gd_scene load_steps=11 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://sprites/player/Samee_Walk.png" type="Texture" id=2]
[ext_resource path="res://sprites/player/Same_Jumping.png" type="Texture" id=3]
[ext_resource path="res://sprites/player/Samee_Full_Sprint.png" type="Texture" id=4]
[ext_resource path="res://sprites/player/Samee_Dash.png" type="Texture" id=5]
[ext_resource path="res://sprites/player/Samee_Attacks_1.png" type="Texture" id=6]
[ext_resource path="res://sprites/player/Samee_Wallclinge.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
height = 13.9707

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "wallc",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "dash",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 20.0
height = 33.6557

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2( 0, 13.454 )
scale = Vector2( 1.347, 2.087 )
shape = SubResource( 1 )

[node name="ad_timer" type="Timer" parent="."]

[node name="atk_hit_timeout" type="Timer" parent="."]

[node name="wc_timer" type="Timer" parent="."]

[node name="wc_timer2" type="Timer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.471954, 0.471939 )
scale = Vector2( 0.163737, 0.194741 )
frames = SubResource( 2 )
animation = "run"
speed_scale = 10.0

[node name="dmg_timer" type="Timer" parent="."]

[node name="hit_timer" type="Timer" parent="."]

[node name="playerHurtBox" type="Area2D" parent="."]
linear_damp = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerHurtBox"]
position = Vector2( 2, 5 )
shape = SubResource( 3 )

[connection signal="area_entered" from="playerHurtBox" to="." method="_on_playerHurtBox_area_entered"]
[connection signal="area_exited" from="playerHurtBox" to="." method="_on_playerHurtBox_area_exited"]
